# Boda

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/newstone/boda/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: ObjectFragmentShader.glsl  ObjectVertexShader.glsl
app/src/main/java/com/newstone/boda/: CameraRenderer.kt  ConfigChooser.kt  ContextFactory.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/newstone/boda/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/newstone/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  Light.cpp  MLDelegate.cpp  MainScene.cpp  MainScene.h  Matrix.cpp  nativelib.cpp
nativelib/src/main/cpp/caculator/: DetectionCalculator.cpp
nativelib/src/main/cpp/caculator/include/: DetectionCalculator.h
nativelib/src/main/cpp/include/: BaseMaterial.h  BaseMesh.h  Camera.h  GLUtils.h  Light.h  MLDelegate.h  MainScene.h  Timer.h
nativelib/src/main/cpp/object/: BoxObject.cpp  ObjectFileLoader.cpp  PlaneObject.cpp
nativelib/src/main/cpp/object/include/: BaseLoader.h  BaseObject.h  BoxObject.h  ObjectFactory.h  ObjectFileLoader.h  PlaneObject.h
nativelib/src/main/java/com/newstone/nativelib/: NativeLib.kt
nativelib/src/test/java/com/newstone/nativelib/: ExampleUnitTest.kt
tools/parser/BodaParser/: BodaParser.sln
tools/parser/BodaParser/BodaParser/: BaseParser.h  BodaParser.vcxproj  FBXParser.cc  FBXParser.h  main.cc
